Fixed image clipping - Phoebe

--- a/test2/src/pages/home/home.scss
+++ b/test2/src/pages/home/home.scss
@@ -1,20 +1,29 @@
 
 
 .full-image {
-  width: 33%;
-   max-width: 80px;
+  display: block;
+  max-width:55%;
+  height: auto;
 }
-
+.no-padding {
+padding: 0 !important;
+}
 .card-description {
   text-align: center;
   word-wrap: break-word;
   font-size: 75%;
 }
 
-   ion-grid > ion-item.item > div.item-inner > div.input-wrapper > ion-label {
+ion-grid > ion-item.item > div.item-inner > div.input-wrapper > ion-label {
         margin-top: 0px;
         margin-right: 0px;
         margin-bottom: 0px;
         margin-left: 0px;
     }
     
+    ion-label > ion-row > ion-col {
+        padding-top: 4px;
+        padding-right: 5px;
+        padding-bottom: 0px;
+        padding-left: 5px;
+    }
